package net.jarlehansen.protobuf.javame;

option java_package = "net.jarlehansen.proto2javame.protobuf.integration.tempfiles.javase";

message ExampleObjectNestedListJavaSe {
	required int32 id = 1;
	repeated Person persons = 2;
}

message Person {
    required string name = 1;
}